# fast-reid

./: README.md  pyproject.toml  requirements.txt
src/fast_reid/: __init__.py
src/fast_reid/fastreid/: __init__.py
src/fast_reid/fastreid/modeling/backbones/: __init__.py
src/fast_reid/fastreid/modeling/meta_arch/: __init__.py
src/fast_reid/fastreid/utils/: checkpoint.py
